--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@angular/cli": "~17.0.0-next.0",
     "@angular/compiler-cli": "^17.0.0-next.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.4",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
