--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^17.0.0-next.0",
     "@angular/cli": "~17.0.0-next.0",
     "@angular/compiler-cli": "^17.0.0-next.0",
+    "@hirez_io/observer-spy": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.4",
     "jasmine-core": "~5.1.0",
