--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.0.0-next.0",
     "@angular/platform-browser-dynamic": "^17.0.0-next.0",
     "@angular/router": "^17.0.0-next.0",
+    "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
