--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,12 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "_enabledBlockTypes": [
+      "if",
+      "for",
+      "switch",
+      "defer"
+    ]
   }
 }
