--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-next.6",
+    "@angular/animations": "^18.0.0",
     "@angular/cdk": "^17.0.0-next.5",
-    "@angular/common": "^17.0.0-next.6",
-    "@angular/compiler": "^17.0.0-next.6",
-    "@angular/core": "^17.0.0-next.6",
-    "@angular/forms": "^17.0.0-next.6",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
     "@angular/material": "^17.0.0-next.5",
-    "@angular/platform-browser": "^17.0.0-next.6",
-    "@angular/platform-browser-dynamic": "^17.0.0-next.6",
-    "@angular/router": "^17.0.0-next.6",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-next.6",
-    "@angular/cli": "~17.0.0-next.6",
-    "@angular/compiler-cli": "^17.0.0-next.6",
+    "@angular-devkit/build-angular": "^18.0.1",
+    "@angular/cli": "~18.0.1",
+    "@angular/compiler-cli": "^18.0.0",
     "@hirez_io/observer-spy": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.4",
@@ -40,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.4.5"
   }
 }
